# Agent_team_building

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  ci_regression.md  deployment.md  evaluation.md  gpt_review_summary.md  implementation_plan.md  implementation_progress.md  phase_10_golden_snapshots.md  phase_12_llm_adapter.md  phase_13_llm_smoke_workflow.md  phase_2_mock_orchestrator.md  phase_3_tool_registry.md  phase_4_memory.md  phase_5_evaluation_harness.md  phase_6_mock_workflow_support.md  phase_7_cli.md  phase_8_deployment_observability.md  phase_9_regression_replay.md  release_checklist.md  safety.md  team_spec.schema.json  team_spec_schema.md
scripts/: ci_regression.sh  release_check.sh  run_mock_evals.py  team_factory_api.py  team_factory_cli.py  validate_specs.py
site/: index.html  review.html  styles.css  tutorial.html
src/team_factory/: __init__.py
team_specs/: scientific_discovery_team.yaml  trading_strategy_research_team.yaml  travel_planning_team.yaml
tests/golden_snapshots/: scientific_discovery_team__main__basic_literature_brief.json  trading_strategy_research_team__research_backtest_review__moving_average_research.json  travel_planning_team__plan_trip__weekend_city_trip.json
tests/integration/: test_mock_orchestrator.py
tests/unit/: test_api.py  test_cli.py  test_evaluation_harness.py  test_golden_snapshots.py  test_llm_adapters.py  test_llm_smoke.py  test_memory_store.py  test_observability.py  test_spec_validation.py  test_tool_registry.py  test_trace_and_run_store.py
(+40 files in other folders)
